package bananacore.epic;

import java.sql.Timestamp;

/**
 * Created by fonnavn on 24.02.2016.
 */
public interface GearInterface {

    void updateGear(int value, Timestamp timestamp);
}
