package bananacore.epic;

import java.sql.Timestamp;


public interface RPMInterface {
    public void updateRPM(int value, Timestamp timestamp);
}
