package bananacore.epic;

import bananacore.epic.interfaces.SpeedInterface;

import java.sql.Timestamp;

/**
 * Created by marton on 29/02/16.
 */
public class SpeedController implements SpeedInterface {


    public void updateVehicleSpeed(int value, Timestamp timestamp) {

    }
}
