package bananacore.epic;

import java.sql.Timestamp;

public interface SpeedInterface {

    public void updateVehicleSpeed(int value, Timestamp timestamp);


}
