@startuml

class DataParser{
}

class App{
    +main: void
    +start: void
}

'Controllers
class RootController{
    -graphController: GraphController
    -brakeController: BrakeController
    -speedController: SpeedController
    -gearController: GearController
    -fuelController: FuelController
}

class GraphController{

}

class BrakeController{
    -active: Boolean
}

class GearController{
}

class SpeedController{
}

class FuelController{
}

'Models
class BrakeSession{
    -startSpd: Integer
    -endSpd: Integer
    -startTime: Timestamp
    -duration: Integer
}

class WrongGearSession{
    -gear: Integer
    -startTime: Timestamp
    -duration: Integer
}

class FuelSession{
    -avgUse: Float
    -startTime: Timestamp
    -duration: Integer
}

class SpeedSession{
    -avgSpeed: Integer
    -startTime: Timestamp
    -duration: Integer
}

'Interfaces
interface BrakeInterface{
    +updateBrakePedalStatus(Boolean, Timestamp)
}

interface RPMInterface{
    +updateRPM(int, Timestamp)
}

interface SpeedInterface{
    +updateVehicleSpeed(int, Timestamp)
}

interface GearInterface{
    +updateGear(int, Timestamp)
}

interface FuelInterface{
    +updateFuelLevel(double, Timestamp)
    +updateFuelConsumedSinceRestart(double value, Timestamp)
}

interface OdometerInterface{
    +updateOdometer(double, Timestamp)
}

'Relations
BrakeInterface<|..BrakeController
FuelInterface<|..FuelController
SpeedInterface<|..SpeedController
RPMInterface<|..GearController
GearInterface<|..GearController
OdometerInterface<|.. FuelController

DataParser o-- BrakeInterface: brakeObservers
DataParser o-- RPMInterface: rpmObservers
DataParser o-- GearInterface: gearObservers
DataParser o-- SpeedInterface: speedObservers
DataParser o-- FuelInterface: fuelObservers
DataParser o-- OdometerInterface: odometerObservers

BrakeController--BrakeSession:save()
SpeedController--SpeedSession:save()
GearController--WrongGearSession:save()
FuelController--FuelSession:save()

App o-- RootController


@enduml